--- a/entrata/readme
+++ b/entrata/readme
@@ -12,5 +12,7 @@ navigate from home page to demopage
 1st validation title of demo page
 2nd validation watch button demo is enabled or not.
 
-3)
+3)sign in page validation
+
+4)residential page validation
 
